@@ -1,34 +1,0 @@
-HXL hashtag,Data type,Category,Description
-#valid_tag,#value_datatype,#valid_category,#description
-#cause,,Crisis,Description of the cause of an event.
-#crisis,,Crisis,Crisis description
-#impact,,Crisis,Description of the impact of a crisis on a group or other entity.
-#severity,,Crisis,Description of the severity of an event.
-#date,date,Metadata,Date when the date in the record applies.
-#description,,Metadata,Long description for a data record (not to be confused with notes).
-#meta,,Metadata,Metadata about a row.
-#status,,Metadata,Project/activity status description
-#affected,number,People,Number of people or households affected by an emergency.
-#beneficiary,,People,Beneficiary description
-#inneed,number,People,Number of people or households in need of assistance.
-#population,,People,Population characteristics.
-#reached,number,People,Number of people or households reached with assistance.
-#targeted,number,People,Number of people or households targeted for assistance
-#adm1,,Places,Admin level 1 description
-#adm2,,Places,Admin level 2 description
-#adm3,,Places,Admin level 3 description
-#adm4,,Places,Admin level 4 description
-#adm5,,Places,Admin level 5 description
-#country,,Places,Country description
-#geo,,Places,"Geodetic geometry information (points, lines, shapes)"
-#loc,,Places,Location description
-#region,,Places,"Supra- or cross-national region (e.g. Sahel, Horn of Africa)."
-#activity,,Response,Project/activity description
-#capacity,,Response,"Description of the response capacity of the activity being described (e.g. ""25 beds"")."
-#contact,,Response,Contact information for the subject of a data record (e.g. an activity).
-#indicator,,Response,Description of a formal indicator being tracked.
-#operations,,Response,Description of a restriction on movement or other activities.
-#org,,Response,Organisation description
-#output,,Response,Output indicator description
-#sector,,Response,Sector/Cluster description
-#subsector,,Response,Subsector description
