@@ -14,7 +14,7 @@ setup(name='libhxl',
       url='http://hxlproject.org',
       install_requires=['python-dateutil', 'xlrd', 'requests', 'unidecode'],
       packages=['hxl'],
-      package_data={'hxl': ['*.csv']},
+      package_data={'hxl': ['*.json','*.csv']},
       include_package_data=True,
       test_suite='tests',
       entry_points={
